# update_tracker

./: LICENSE  README.md  pyproject.toml
src/tests/: test_ansible_query.py  test_last_update.py
src/update_tracker/: __init__.py  database.py  db.py  gui_report.py  last_update.py  lib.py  main.py  manage.py  notify_upgrade.py  query.py  report.py  update.py
